[project]
name = "stock-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "yfinance>=0.2.62",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.401",
    "rich>=14.0.0",
]
